# readyplayern

./: .envrc.example  .gitignore  .sesskey  README.md  apicall.py  app.py  gradioapp.py  pyproject.toml  streamlit_app.py  twelvelabs.py
notebooks/: co_hikes.ipynb  test.py  twelvelabs.ipynb  uploadvideos.ipynb
ready_player_n/: trail_metadata.py  twelvelabs.py
scripts/: youtube_conv.py
