[tool.poetry]
name = "ready-player-n"
version = "0.1.0"
description = ""
authors = ["Matt Florence <matt@mattflo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twelvelabs = "^0.2.6"
gradio = "^4.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
